--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1,14 +1,60 @@
 #nexlifyscroll-top {
     position: fixed;
+    width: 50px;
+    height: 50px;
     opacity: 0;
     cursor: pointer;
-    padding: 10px;
     border-radius: 50%;
     border: none;
     z-index: 9999;
     transition: opacity 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 }
-#nexlifyscroll-top img {
-    width: 30px;
-    height: 30px;
+
+.nexlifyscroll-icon {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    --progress-angle: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nexlifyscroll-icon::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: conic-gradient(var(--progress-color, #ff0000) calc(var(--progress-angle) * 1%), transparent 0%);
+    z-index: -1;
+    transition: background 0.1s;
+}
+
+.nexlifyscroll-icon img {
+    width: 46px;
+    height: 46px;
+    background: #fff;
+    margin: auto;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+#nexlifyscroll-top.bottom-right {
+    bottom: 20px;
+    right: 20px;
+}
+
+#nexlifyscroll-top.bottom-left {
+    bottom: 20px;
+    left: 20px;
 }
